# agentlamp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROMPT.md  README.en.md  README.md  SECURITY.md  TASKS.md  pyproject.toml
.codex/: config.toml
docs/: BUILD.md  README.md
docs/api/: collector_ingest_api.md  device_frame_api.md
docs/architecture/: architecture.md
docs/cloud/: cloud_contract.md  deploy.md
docs/collector/: collector_contract.md
docs/devlog/: 01-setup.md  02-server-impl.md  02-server-review.md  03-firmware-impl.md  03-firmware-review.md  04-provisioning-impl.md  05-hardware-bringup.md  06-task005-kickoff.md  07-task005-collector.md  08-vnext-requirements.md  09-vnext-kickoff.md  10-codex-hooks-live.md  11-fleet-legibility-r2-r3.md  12-council-hardening.md  13-session-title-precision.md  14-usb-cable-transport.md  15-relay-p1-signed-ingest.md  16-relay-cloudflare-build-spec.md  17-multi-device-cloud-investigation.md  DEVLOG.md  FLASH-RUNBOOK.md
docs/firmware/: firmware_contract.md
docs/original/: agentlamp_ai_spec.md
docs/plans/: 2026-06-05-phone-desktop-cloud-readers.md  2026-06-06-iphone-only-cloud-widget.md  2026-06-07-multi-device-cloud-aggregation.md
docs/product/: product_spec.md
docs/providers/: README.md  adapter_acceptance.md  claude_adapter.md  codex_adapter.md  provider_normalization.md
docs/research/: research-before-build.md
docs/runbook/: switch-fast.md
docs/security/: pairing_and_auth.md  provider_sanitization_fixtures.md  sanitization_policy.md  security_model.md  threat_model.md
docs/ui/: display_spec.md
firmware/: README.md  platformio.ini
firmware/scripts/: fetch_ca_bundle.sh
firmware/src/: ca_bundle.h  config.h  diag.cpp  display.h  frame.h  led.h  main.cpp  provisioning.h  relay.h  renderer.h  theme.h
memories/: consensus.md
readers/: README.md
readers/iphone-widget/: DEPLOY.md  README.md  agentlamp-alert.js  agentlamp-widget.js  frame-view.js
server/: pytest.ini
server/agentlamp_server/: __init__.py  __main__.py  app.py  ingest.py  preview.py  sanitize.py  state.py  validate.py
server/tests/: conftest.py  test_api.py  test_frame.py  test_ingest.py  test_parity.py  (+1 more)
src/admin/: README.md
tests/: README.md
(+54 files in other folders)
